2007-02-20  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Add MAINTAINERS to EXTRA_DIST so others
	can find out where to send patches. Hi Linus :-)

2007-02-17  Linus Torvalds  <torvalds@woody.linux-foundation.org>

        * src/common.h (MetaActionTitleBar): renamed from
	MetaActionDoubleClickTitleBar; added _LOWER and _MENU.
	* src/frames.c (meta_frame_titlebar_event): renamed
	enums as above; added code to handle _LOWER and _MENU,
	which is moved in from meta_frame_{middle|right}_click_event.
	* src/frames.c (meta_frame_middle_click_event,
        meta_frame_right_click_event): rewrote in terms of
        meta_frame_titlebar_event.
	* src/prefs.c: removed "DoubleClick" from names as above.
	* src/prefs.c (action_titlebar_from_string): added cases
	for "lower" and "menu".
	Fixes #408902.

2007-02-17  Linus Torvalds  <torvalds@woody.linux-foundation.org>

        * src/frames.c (meta_frames_button_press_event): Split out
	code for different kinds of click into separate functions.
	Fixes #408899.
	* src/frames.c (meta_frame_titlebar_event,
         meta_frame_double_click_event, meta_frame_middle_click_event,
         meta_frame_right_click_event): new functions.

2007-01-27  Bruno Boaventura <brunobol@gnome.org>

	* src/metacity-dialog.c (kill_window_question): Change dialog
	icon because gnome-icon-theme have no more "panel-force-quit".
	Patch from Jaap A. Haitsma <jaap@haitsma.org>.	

2007-01-16  Thomas Thurman  <thomas@thurman.org.uk>

        * doc/compositor-control.txt: fix silly thinko.

2007-01-16  Thomas Thurman  <thomas@thurman.org.uk>

        * configure.in: post-release bump to 2.17.8.

2007-01-16  Thomas Thurman  <thomas@thurman.org.uk>

        * doc/compositor-control.txt: New file.

2007-01-16  Thomas Thurman  <thomas@thurman.org.uk>

        * src/compositor.c (meta_compositor_new): Removed
        #ifdef SPIFFY_COMPOSITOR throughout the file. Replaced with check
	for environment variable METACITY_BLING, which may be temporary.
