@@ -171,14 +171,12 @@ typedef enum
 
 typedef enum
 {
-  META_ACTION_TITLEBAR_TOGGLE_SHADE,
-  META_ACTION_TITLEBAR_TOGGLE_MAXIMIZE,
-  META_ACTION_TITLEBAR_MINIMIZE,
-  META_ACTION_TITLEBAR_NONE,
-  META_ACTION_TITLEBAR_LOWER,
-  META_ACTION_TITLEBAR_MENU,
-  META_ACTION_TITLEBAR_LAST
-} MetaActionTitlebar;
+  META_ACTION_DOUBLE_CLICK_TITLEBAR_TOGGLE_SHADE,
+  META_ACTION_DOUBLE_CLICK_TITLEBAR_TOGGLE_MAXIMIZE,
+  META_ACTION_DOUBLE_CLICK_TITLEBAR_MINIMIZE,
+  META_ACTION_DOUBLE_CLICK_TITLEBAR_NONE,
+  META_ACTION_DOUBLE_CLICK_TITLEBAR_LAST
+} MetaActionDoubleClickTitlebar;
 
 typedef enum
 {
