@@ -1,3 +1,10 @@
+2007-02-21  Thomas Thurman  <thomas@thurman.org.uk>
+
+        * src/common.h, src/frames.c, src/prefs.c: back out
+	last patch from Linus because it belongs in trunk and
+	not the 2.18 branch. (My fault for applying it in the
+	wrong place.)
+
 2007-02-20  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* Makefile.am: Add MAINTAINERS to EXTRA_DIST so others
